--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     def nav_version = "1.0.0"
 
     implementation "android.arch.navigation:navigation-fragment:$nav_version"
+    implementation "com.android.support:leanback-v17:28.0.0"
     implementation "android.arch.navigation:navigation-ui:$nav_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.9.0'
