--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,16 @@ android {
 }
 
 dependencies {
-    def nav_version = "1.0.0"
-
-    implementation "android.arch.navigation:navigation-fragment:$nav_version"
+    implementation "android.arch.navigation:navigation-fragment:1.0.0"
     implementation "com.android.support:leanback-v17:28.0.0"
-    implementation "android.arch.navigation:navigation-ui:$nav_version"
+    implementation "android.arch.navigation:navigation-ui:1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation 'com.google.firebase:firebase-core:16.0.9'
