--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui:1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
@@ -42,5 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
 }
 apply plugin: 'com.google.gms.google-services'
