--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,37 +2,44 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:dist="http://schemas.android.com/apk/distribution"
 	package="android.aresid.happyapp">
-
 	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.READ_PROFILE" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	<uses-feature android:name="android.software.leanback" android:required="false" />
-	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
+	<uses-feature
+		android:name="android.software.leanback"
+		android:required="false" />
+	<uses-feature
+		android:name="android.hardware.touchscreen"
+		android:required="false" />
 
 	<dist:module dist:instant="true" />
 
 	<application
 		android:allowBackup="true"
+		android:banner="@string/app_name"
+		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:banner="@string/app_name"
-		android:theme="@style/Theme.HappyApp"
-		android:fullBackupContent="@xml/backup_descriptor">
+		android:theme="@style/Theme.HappyApp">
 		<activity
 			android:name=".OnboardingActivity"
-			android:configChanges="orientation|keyboardHidden|screenSize"
-			android:label="@string/app_name"
-			android:theme="@style/Theme.HappyApp.NoActionBar">
+			android:screenOrientation="portrait"
+			android:theme="@style/Theme.HappyApp">
 			<intent-filter>
-				<category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
+				<category android:name="android.intent.category.LEANBACK_LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".MainActivity"
-			android:theme="@style/Theme.HappyApp.NoActionBar" />
+			android:theme="@style/Theme.HappyApp">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+			</intent-filter>
+		</activity>
 		<activity
 			android:name=".LoginActivity"
 			android:label="@string/app_name"
@@ -44,5 +51,4 @@
 			</intent-filter>
 		</activity>
 	</application>
-
 </manifest>
