started fucking refactoring the whole fucking app fuck yeaa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".LoginActivity"
+			android:name=".EntryActivity"
 			android:label="@string/app_name"
 			android:screenOrientation="portrait">
 			<intent-filter>
