--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha05'
