--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('A:\\Android Keystores\\happyapp_keystore.jks')
+            storePassword 'Ssspeace321.'
+            keyAlias = 'HappyApp'
+            keyPassword 'Ssspeace321.'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId 'android.aresid.happyapp'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 13
+        versionName '13.0.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
