--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,5 +51,8 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".GoogleEmailVerificationActivity"
+			android:screenOrientation="portrait" />
 	</application>
 </manifest>
