--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,23 +36,23 @@ dependencies {
     implementation "com.android.support:leanback-v17:28.0.0"
     implementation "android.arch.navigation:navigation-ui:1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.billingclient:billing:2.0.2'
-    implementation 'com.google.firebase:firebase-auth:18.1.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta03'
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-core:17.0.1'
-    implementation 'com.google.firebase:firebase-firestore:20.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta02'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta03'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
 }
 apply plugin: 'com.google.gms.google-services'
