--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,10 @@ android {
         applicationId 'com.aresid.happyapp'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
+        versionCode 2
         versionName '1.0.13'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionNameSuffix = 'intern'
     }
     buildTypes {
         release {
@@ -37,13 +38,13 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui:1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.billingclient:billing:2.0.2'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta05'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-core:17.2.0'
@@ -52,7 +53,7 @@ dependencies {
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta05'
 }
 apply plugin: 'com.google.gms.google-services'
