--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 	xmlns:dist="http://schemas.android.com/apk/distribution"
 	package="com.aresid.happyapp">
 	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
-	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+<!--	<uses-permission android:name="android.permission.GET_ACCOUNTS" />-->
 	<uses-permission android:name="android.permission.READ_PROFILE" />
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
+<!--	<uses-permission android:name="android.permission.READ_CONTACTS" />-->
 	<uses-permission android:name="com.android.vending.BILLING" />
 
 	<uses-feature
