--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId 'com.aresid.happyapp'
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 2
         versionName '1.0.13'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation "com.android.billingclient:billing:2.1.0"
     implementation "android.arch.navigation:navigation-fragment:1.0.0"
     implementation "com.android.support:leanback-v17:28.0.0"
     implementation "android.arch.navigation:navigation-ui:1.0.0"
