--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
 	xmlns:dist="http://schemas.android.com/apk/distribution"
 	package="com.aresid.happyapp">
 	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
-<!--	<uses-permission android:name="android.permission.GET_ACCOUNTS" />-->
-	<uses-permission android:name="android.permission.READ_PROFILE" />
-<!--	<uses-permission android:name="android.permission.READ_CONTACTS" />-->
+	<!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
+	<uses-permission android:name="android.permission.READ_PROFILE" /> <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
 	<uses-permission android:name="com.android.vending.BILLING" />
 
 	<uses-feature
@@ -26,6 +25,13 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.HappyApp">
+		<activity android:name=".SplashActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		<activity
 			android:name=".MainActivity"
 			android:theme="@style/Theme.HappyApp">
@@ -51,4 +57,5 @@
 			</intent-filter>
 		</activity>
 	</application>
+
 </manifest>
