--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
 
 dependencies {
     implementation "com.android.billingclient:billing:2.1.0"
-    implementation "android.arch.navigation:navigation-fragment:1.0.0"
-    implementation "com.android.support:leanback-v17:28.0.0"
-    implementation "android.arch.navigation:navigation-ui:1.0.0"
+    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
+    implementation 'androidx.leanback:leanback:1.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
