--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         release {
-            storeFile file('A:\\Android Keystores\\happyapp_keystore.jks')
-            storePassword 'Ssspeace321.'
-            keyAlias = 'HappyApp'
-            keyPassword 'Ssspeace321.'
+        storeFile file('C:\\Program Files\\Android\\Keystore\\happyapp_keystore')
+            storePassword 'happyapp'
+            keyAlias = 'release'
+            keyPassword 'release'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId 'com.aresid.happyapp'
         minSdkVersion 21
@@ -34,9 +34,10 @@ android {
 
 dependencies {
     implementation "com.android.billingclient:billing:2.1.0"
-    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
+    implementation 'androidx.navigation:navigation-fragment:2.2.0-rc04'
     implementation 'androidx.leanback:leanback:1.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
+    implementation 'com.google.gms:google-services:4.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.2.0-rc04'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
@@ -51,10 +52,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    testImplementation 'junit:junit:4.13-rc-2'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation "com.github.koushikcse:LoadingButton:1.5"
 }
 apply plugin: 'com.google.gms.google-services'
