--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         release {
-        storeFile file('C:\\Program Files\\Android\\Keystore\\happyapp_keystore')
-            storePassword 'happyapp'
+        storeFile file('C:\\Users\\renej\\Google Drive\\documents\\android\\keystore\\happyapp_keystore.jks')
+            storePassword 'He5xC4B5rZm95aJLz1Bt5i4R'
             keyAlias = 'release'
-            keyPassword 'release'
+            keyPassword 'Ag4Bb65jK8zN7bP3wMhC4jN7'
         }
     }
     compileSdkVersion 29
@@ -14,7 +14,7 @@ android {
         applicationId 'com.aresid.happyapp'
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
+        versionCode 4
         versionName '1.0.13'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionNameSuffix = 'intern'
@@ -39,9 +39,9 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'androidx.navigation:navigation-ui:2.2.0-rc04'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.billingclient:billing:2.1.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
@@ -49,7 +49,7 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     testImplementation 'junit:junit:4.13'
