--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         release {
-        storeFile file('C:\\Users\\renej\\Google Drive\\documents\\android\\keystore\\happyapp_keystore.jks')
+            storeFile file('C:\\Users\\renej\\Google Drive\\documents\\android\\keystore\\happyapp_keystore.jks')
             storePassword 'He5xC4B5rZm95aJLz1Bt5i4R'
             keyAlias = 'release'
-            keyPassword 'Ag4Bb65jK8zN7bP3wMhC4jN7'
+            keyPassword 'He5xC4B5rZm95aJLz1Bt5i4R'
         }
     }
     compileSdkVersion 29
@@ -24,6 +24,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            manifestPlaceholders = [:]
         }
     }
     compileOptions {
@@ -34,13 +35,13 @@ android {
 
 dependencies {
     implementation "com.android.billingclient:billing:2.1.0"
-    implementation 'androidx.navigation:navigation-fragment:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-fragment:2.2.0'
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'com.google.gms:google-services:4.3.3'
-    implementation 'androidx.navigation:navigation-ui:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-ui:2.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.billingclient:billing:2.1.0'
