renamed all the xml values and started refactoring the viewpager2.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
 
 	<application
 		android:allowBackup="true"
-		android:banner="@string/app_name"
+		android:banner="@string/appName"
 		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
+		android:label="@string/appName"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.HappyApp">
@@ -34,7 +34,7 @@
 		</activity>
 		<activity
 			android:name=".EntryActivity"
-			android:label="@string/app_name"
+			android:label="@string/appName"
 			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
