--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     signingConfigs {
         release {
-            storeFile file('C:\\Users\\renej\\Google Drive\\documents\\android\\keystore\\happyapp_keystore.jks')
-            storePassword 'He5xC4B5rZm95aJLz1Bt5i4R'
-            keyAlias = 'release'
-            keyPassword 'He5xC4B5rZm95aJLz1Bt5i4R'
+            storeFile file('C:\\Users\\renej\\GoogleDrive\\documents\\android\\keystore\\happyapp_keystore2.jks')
+            storePassword ''
+            keyAlias = 'happyapp_release_key'
+            keyPassword ''
         }
     }
     compileSdkVersion 29
@@ -19,17 +20,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionNameSuffix = 'intern'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
-            manifestPlaceholders = [:]
-        }
-    }
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
     }
 }
 
@@ -46,7 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.android.billingclient:billing:2.1.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -60,4 +58,3 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation "com.github.koushikcse:LoadingButton:1.5"
 }
-apply plugin: 'com.google.gms.google-services'
