--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,8 @@
 		android:label="@string/appName"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.HappyApp">
-		<activity
-			android:name=".MainActivity"
-			android:theme="@style/Theme.HappyApp">
+		android:theme="@style/Theme.HappyApp.Launcher">
+		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 			</intent-filter>
