got the registration flow working. user can now subscribe to a subscription and is registered to the database on the server and is being sent a verification email.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".EmailVerificationActivity"
+			android:name=".ConfirmEmailActivity"
 			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
