--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,29 +27,29 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            debuggable = true
         }
     }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.billingclient:billing:2.1.0"
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.android.billingclient:billing:2.1.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-core:17.2.2'
-    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation 'com.google.firebase:firebase-firestore:21.4.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha04'
