--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 	xmlns:dist="http://schemas.android.com/apk/distribution"
 	package="com.aresid.happyapp">
 	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
-	<!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
+	<!-- <uses-permission android:name_with_placeholder="android.permission.GET_ACCOUNTS" /> -->
 	<uses-permission android:name="android.permission.CALL_PHONE"/>
-	<uses-permission android:name="android.permission.READ_PROFILE" /> <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+	<uses-permission android:name="android.permission.READ_PROFILE"/> <!-- <uses-permission android:name_with_placeholder="android.permission.READ_CONTACTS" /> -->
 	<uses-permission android:name="com.android.vending.BILLING" />
 
 	<uses-feature
@@ -19,10 +19,10 @@
 
 	<application
 		android:allowBackup="true"
-		android:banner="@string/appName"
+		android:banner="@string/app_name"
 		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
-		android:label="@string/appName"
+		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.HappyApp.Launcher">
@@ -33,7 +33,7 @@
 		</activity>
 		<activity
 			android:name=".EntryActivity"
-			android:label="@string/appName"
+			android:label="@string/app_name"
 			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
