--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    //noinspection GradleDependency
-    implementation 'commons-net:commons-net:3.6'
+    implementation 'commons-net:commons-net:20030805.205232'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
