Implementation of the BillingRepository works so far. And great. I got the ViewPager2 showing the different Subscription offers working. I have a little bit of performance concerns there and these concerns are to address after the release. I have also changed my approach with the ViewPager2 architecture and therefore deleted the unnecessary ..ContainerFragments.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta01'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 }
