Uff, I did so much stuff. Totally forgot to commit the changes. I basically refined the subscribe and login flow, added a BillingRepository, refined the BillingRepository with Kotlin Coroutines and added a bunch of error handling. I also fixed the GoogleSignIn. It is now working as expected.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,6 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
-    // Glide todo: needed?
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
@@ -75,7 +72,7 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-core:17.4.2'
-    implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
     // Material Design
     implementation 'com.google.android.material:material:1.2.0-alpha06'
@@ -95,7 +92,7 @@ dependencies {
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    // Idk wtf todo
+    // Kotlin SDK
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Google Play Billing with KTX
@@ -108,6 +105,7 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
     // Fragment KTX
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
