--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.HappyApp.Launcher"
 		>
-		<activity android:name="com.aresid.happyapp.activity.MainActivity"
+		<activity
+			android:name="com.aresid.happyapp.activity.MainActivity"
+			android:launchMode="standard"
 			>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW"/>
@@ -24,6 +26,7 @@
 		</activity>
 		<activity
 			android:name="com.aresid.happyapp.activity.MainActivity2"
+			android:launchMode="standard"
 			android:screenOrientation="portrait"
 			>
 			<intent-filter>
@@ -36,6 +39,7 @@
 		<activity
 			android:name=".EntryActivity"
 			android:label="@string/app_name"
+			android:launchMode="standard"
 			>
 		</activity>
 	</application>
